<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>

    <groupId>io.9tiger</groupId>
    <artifactId>db2rest</artifactId>
    <name>db2rest</name>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <description>An Open Source instant REST Data API for databases. This is the DB2Rest parent Maven project.</description>

    <!-- PROJECT ORGANIZATION METADATA -->
    <organization>
        <name>9Tiger</name>
        <url>https://9tiger.io</url>
    </organization>
    <url>https://db2rest.com</url>
    <inceptionYear>2023</inceptionYear>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>kdhrubo</id> <!-- GitHub ID -->
            <name>Dhrubo Kayal</name>
            <organization>9Tiger.io</organization>
            <roles>
                <role>Maintainer</role>
            </roles>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com//9tigerio/db2rest.git</connection>
        <developerConnection>scm:git:https://github.com/9tigerio/db2rest</developerConnection>
        <url>https://github.com/9tigerio/db2rest</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/9tigerio/db2rest/issues</url>
    </issueManagement>

    <distributionManagement>
        <snapshotRepository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/9tigerio/db2rest</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </snapshotRepository>
        <repository>
            <id>central</id>
            <name>Central Portal</name>
            <url>https://central.sonatype.com</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </distributionManagement>

    <!-- BEGIN MODULE LAYOUT -->

    <properties>
        <revision>1.6.5-SNAPSHOT</revision>
        <java.version>21</java.version>
        <spring-restdocs.version>3.0.1</spring-restdocs.version>
        <rsql-parser.version>2.3.3</rsql-parser.version>
        <calcite.version>1.38.0</calcite.version>
        <jte.version>3.1.16</jte.version>
        <!--
        <hibernate.version>7.0.6.Final</hibernate.version>
        -->
    </properties>

    <modules>
        <module>db2rest-api</module>
        <module>db2rest-core</module>
        <module>db2rest-dialects</module>
        <module>db2rest-auth</module>
    </modules>

    <dependencies>

        <!--
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>${hibernate.version}</version>
        </dependency>
        -->

        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-csv</artifactId>
        </dependency>

        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>nimbus-jose-jwt</artifactId>
            <version>9.47</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>


        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
        </dependency>

        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>


        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>

        </dependency>


        <dependency>
            <groupId>io.github.nstdio</groupId>
            <artifactId>rsql-parser</artifactId>
            <version>${rsql-parser.version}</version>
        </dependency>




    </dependencies>
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>flatten-maven-plugin</artifactId>
                        <version>1.6.0</version>
                        <configuration>
                            <updatePomFile>true</updatePomFile>
                            <flattenMode>oss</flattenMode>
                            <flattenDependencyMode>all</flattenDependencyMode>
                        </configuration>
                        <executions>
                            <execution>
                                <id>flatten</id>
                                <phase>process-resources</phase>
                                <goals>
                                    <goal>flatten</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>flatten.clean</id>
                                <phase>clean</phase>
                                <goals>
                                    <goal>clean</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <!-- Plugin to generate release source -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <!-- Plugin for creating Javadocs; goal for preparing docs for upload to
                        Central Portal: javadoc:aggregate -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.10.1</version>
                        <configuration>
                            <doclint>all,-missing</doclint>
                            <bottom>
                                    <![CDATA[Copyright &#169; {inceptionYear}&#x2023;{currentYear} {organizationName}. Generated from source code published under the Apache-2.0 license. For more information, see the <a href="https://db2rest.com">DB2Rest website</a>]]></bottom>
                            <source>${java.version}</source>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.7</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <bestPractices>true</bestPractices>
                            <signer>bc</signer>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.4.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <tokenAuth>true</tokenAuth>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
